--- a/HTML - Personal Site/css/styles.css
+++ b/HTML - Personal Site/css/styles.css
@@ -1,13 +1,13 @@
 body {
-    background-color:#e0ebe8;
+    background-color: #fafafa;
   }
 
 h1 {
-  color: #66BFBF
+  color: #cb3737;
 }
 
 h3 {
-    color: #66BFBF
+    color: #cb3737;
 }
 
 hr {
